Formatear código automáticamente con Prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,18 +5,10 @@
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "src/*"
-      ]
+      "~/*": ["src/*"]
     },
     "jsx": "preserve"
   },
-  "include": [
-    ".astro/types.d.ts",
-    "**/*"
-  ],
-  "exclude": [
-    "dist/",
-    "bpa-backend/"
-  ]
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist/", "bpa-backend/"]
 }
